--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     build:
       context: .
       dockerfile: BuildingConstructApi/Dockerfile
+    volumes:
+      - ./appsettings.Development.json:/app/appsettings.Development.json
     #depends_on:
     #      - db
     networks:
