--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       dockerfile: BuildingConstructApi/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_HTTPS_PORT: 5000
       #ASPNETCORE_URLS: https://+:443;http://+:80
     volumes:
       - ./appsettings.Development.json:/app/appsettings.Development.json
