--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,8 +44,11 @@ services:
         environment:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=https://+:443;http://+:80
+        - ASPNETCORE_Kestrel__Certificates__Default__Password="Hoainam@123"
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
         volumes:
           - ./appsettings.Development.json:/app/appsettings.Development.json
+          - ~/.aspnet/https:/https:ro
         networks:
             - backendnetwork
 
