--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DeployDB": "Server=159.65.7.165,1433;Initial Catalog=BuildingConstruct;User ID=sa;Password=Helloworld123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
+    "DeployDB": "Server=159.65.7.165,1433;Initial Catalog=BuildingConstruct;User ID=sa;Password=Hoainam@123;Persist Security Info=True;Encrypt = False; TrustServerCertificate = True",
     "ThinhDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BuildingConstruct;User ID=swp391;pwd=123",
     "DefaultDB": "Data Source=.;Initial Catalog=BuildingConstruct;User ID=sa;pwd=1",
     "HieuDB": "Data Source=LAPTOP-O8KOB1P9;Initial Catalog=BuildingConstruct;User ID=sa;pwd=123456780"
