--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,14 +36,13 @@ services:
     buildingconstructapi:
         image: ${DOCKER_REGISTRY-}buildingconstructapi
         ports:
-          - "5000:80"
+          - "5000:5000"
         build:
           context: .
           dockerfile: BuildingConstructApi/Dockerfile
         environment:
-          ASPNETCORE_ENVIRONMENT: Development
+        - ASPNETCORE_ENVIRONMENT=Development
         volumes:
-          - ./appsettings.Development.json:/app/appsettings.Development.json
+         - ./appsettings.Development.json:/app/appsettings.Development.json
         networks:
-            - backendnetwork
-
+        - backendnetwork
