--- a/BuildingConstructApplication/Application.csproj
+++ b/BuildingConstructApplication/Application.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validator\" />
+  </ItemGroup>
+
 </Project>
